--- a/src/styles.css
+++ b/src/styles.css
@@ -3,13 +3,19 @@ body {
 }
 
 h1 {
-  color: black;
+  color: #000;
   font-family: "Playfair Display", serif;
   font-weight: bold;
-  margin: 50px 50px 30px 50px;
+  margin: 85px 50px 30px 50px;
 }
 
 p {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
+}
+
+.view-link {
+  margin: 20px 50px;
+  font-size: 20px;
+  color: #000;
 }
