--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,22 @@
 body {
-  background-color: #fff;
+  background-color: #FAF5E7;
 }
 
 h1 {
   color: #000;
-  font-family: "Yeseva One", cursive;
+  font-family: 'Space Mono', monospace;
   font-weight: normal;
   margin: 85px 50px 30px 50px;
 }
 
 h2 {
   color: #000;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: 'Space Mono', monospace;
   font-weight: bold;
 }
 
 p {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: 'Spectral', serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 30px;
@@ -34,8 +34,8 @@ a {
 .view-link {
   margin: 20px 50px;
   font-size: 20px;
-  color: #f25244;
-  font-family: "Josefin Sans", sans-serif;
+  color: #E15A54;
+  font-family: 'Space Mono', monospace;
   text-decoration: none;
 }
 
@@ -45,7 +45,8 @@ a {
 
 .section-title {
   font-size: 40px;
-  font-family: "Yeseva One", cursive;
+  font-family: 'Space Mono', monospace;
+  padding-bottom: 70px;
 }
 
 .primary-button {
