--- a/src/styles.css
+++ b/src/styles.css
@@ -27,13 +27,21 @@ a {
 }
 
 .hero {
-  padding-bottom: 250px;
+  padding-bottom: 100px;
   margin: 0;
 }
 
 .view-link {
   margin: 20px 50px;
   font-size: 20px;
+  color: #E15A54;
+  font-family: 'Space Mono', monospace;
+  text-decoration: none;
+}
+
+.view-link a {
+  text-decoration: none;
+  font-size: 30px;
   color: #E15A54;
   font-family: 'Space Mono', monospace;
   text-decoration: none;
@@ -46,7 +54,7 @@ a {
 .section-title {
   font-size: 40px;
   font-family: 'Space Mono', monospace;
-  padding-bottom: 70px;
+  padding: 200px 20px 40px 20px;
 }
 
 .primary-button {
@@ -71,7 +79,7 @@ a {
 }
 
 .project-description {
-  padding: 120px 40px 120px 20px;
+  padding: 120px 40px 120px 50px;
 }
 
 .project-image {
