--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,24 @@
 body {
-  background-color: #FAF5E7;
+  background-color: #E4BCFE;
 }
 
 h1 {
   color: #000;
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   font-weight: normal;
   margin: 85px 50px 30px 50px;
 }
 
 h2 {
   color: #000;
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   font-weight: bold;
 }
 
 p {
-  font-family: 'Spectral', serif;
+  font-family: "Spectral", serif;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 30px;
 }
 
@@ -33,34 +33,47 @@ a {
 
 .view-link {
   margin: 20px 50px;
-  font-size: 20px;
-  color: #E15A54;
-  font-family: 'Space Mono', monospace;
-  text-decoration: none;
 }
 
 .view-link a {
   text-decoration: none;
   font-size: 30px;
-  color: #E15A54;
-  font-family: 'Space Mono', monospace;
+  color: #140941;
+  font-family: "Space Mono", monospace;
   text-decoration: none;
 }
 
-.view-link:hover {
-  color: #faa28c;
+.view-link a:hover {
+  text-decoration: underline;
+}
+
+.highlight-1{
+  background: linear-gradient(120deg, #F1EB5B 0%, #F1EB5B 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 20%;
+  background-position: 0 60%;
+}
+
+.highlight-2 {
+  background: linear-gradient(120deg, #EE237F 0%, #EE237F 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 20%;
+  background-position: 0 60%;
 }
 
 .section-title {
   font-size: 40px;
-  font-family: 'Space Mono', monospace;
-  padding: 200px 20px 40px 20px;
+  font-family: "Space Mono", monospace;
+  padding: 200px 20px 10px 20px;
 }
 
+
+
 .primary-button {
-  background: #42a4a3;
+  background: #6DCBDB;
   border-radius: 4px;
-  color: white;
+  color: #000;
+  font-family: "Space Mono", monospace;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
@@ -68,14 +81,25 @@ a {
   margin-right: 15px;
 }
 
+.primary-button:hover {
+  color: #000;
+  background: #F1EB5B;
+}
+
 .secondary-button {
-  background: #d8b851;
+  background: #F281AB;
   border-radius: 4px;
-  color: white;
-  font-size: 18px;
+  color: #000;
+  font-family: "Space Mono", monospace;
+  font-size: 20px;
   line-height: 27px;
   padding: 15px 30px;
   text-decoration: none;
+}
+
+.secondary-button:hover {
+  color: #fff;
+  background: #7C469A;
 }
 
 .project-description {
