--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,37 @@
+:root {
+  --heading-font-family: "Space Mono", monospace;
+  --default-font-family: "Spectral", serif;
+  --heading-color: #000;
+  --default-color: #000;
+}
+
 body {
   background-color: #f1eff1;
 }
 
 h1 {
-  color: #000;
-  font-family: "Space Mono", monospace;
+  color: var(--heading-color);
+  font-family: var(--heading-font-family);
   font-weight: normal;
   margin: 130px 50px 30px 50px;
 }
 
 h2 {
-  color: #000;
+  color: var(--heading-color);
   font-size: 40px;
-  font-family: "Space Mono", monospace;
+  font-family: var(--heading-font-family);
   font-weight: bold;
 }
 
 p {
-  font-family: "Spectral", serif;
+  font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
 }
 
 a {
-  color: #000;
+  color: var(--default-color);
 }
 
 .hero {
@@ -34,8 +41,8 @@ a {
 
 .view-work {
   padding-top: 90px;
-  font-family: "Space Mono";
-  color: #000;
+  font-family: var(--heading-font-family);
+  color: var(--default-color);
   text-decoration: underline;
   text-decoration-color: #c847d0;
   font-size: 24px;
@@ -51,7 +58,7 @@ a {
 .section-title {
   font-size: 40px;
   font-weight: bold;
-  font-family: "Space Mono", monospace;
+  font-family: var(--heading-font-family);
   padding: 125px 20px 50px 20px;
 }
 
@@ -59,8 +66,8 @@ a {
   background: #c7f4f1;
   border: 4px solid #faa28c;
   border-radius: 4px;
-  color: #000;
-  font-family: "Space Mono", monospace;
+  color: var(--default-color);
+  font-family: var(--heading-font-family);
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
@@ -69,7 +76,7 @@ a {
 }
 
 .primary-button:hover {
-  color: #000;
+  color: var(--default-color);
   background: #faa28c;
   border: 4px solid #c7f4f1;
 }
@@ -78,8 +85,8 @@ a {
   background: #cc99fe;
   border: 4px solid #c847d0;
   border-radius: 4px;
-  color: #000;
-  font-family: "Space Mono", monospace;
+  color: var(--default-color);
+  font-family: var(--heading-font-family);
   font-size: 20px;
   line-height: 27px;
   padding: 15px 30px;
@@ -87,7 +94,7 @@ a {
 }
 
 .secondary-button:hover {
-  color: #000;
+  color: var(--default-color);
   background: #c847d0;
   border: 4px solid #cc99fe;
 }
