--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
   --default-font-family: "Spectral", serif;
   --heading-color: #000;
   --default-color: #000;
+  --branding-color: #faa28c;
+  --secondary-color: #c847d0;
+  --tertiary-color: #c7f4f1;
+  --fourth-color: #cc99fe;
 }
 
 body {
@@ -44,7 +48,7 @@ a {
   font-family: var(--heading-font-family);
   color: var(--default-color);
   text-decoration: underline;
-  text-decoration-color: #c847d0;
+  text-decoration-color: var(--secondary-color);
   font-size: 24px;
 }
 
@@ -63,8 +67,8 @@ a {
 }
 
 .primary-button {
-  background: #c7f4f1;
-  border: 4px solid #faa28c;
+  background: var(--tertiary-color);
+  border: 4px solid var(--branding-color);
   border-radius: 4px;
   color: var(--default-color);
   font-family: var(--heading-font-family);
@@ -77,13 +81,13 @@ a {
 
 .primary-button:hover {
   color: var(--default-color);
-  background: #faa28c;
-  border: 4px solid #c7f4f1;
+  background: var(--branding-color);
+  border: 4px solid var(--tertiary-color);
 }
 
 .secondary-button {
-  background: #cc99fe;
-  border: 4px solid #c847d0;
+  background: var(--fourth-color);
+  border: 4px solid var(--secondary-color);
   border-radius: 4px;
   color: var(--default-color);
   font-family: var(--heading-font-family);
@@ -95,8 +99,8 @@ a {
 
 .secondary-button:hover {
   color: var(--default-color);
-  background: #c847d0;
-  border: 4px solid #cc99fe;
+  background: var(--secondary-color);
+  border: 4px solid var(--fourth-color);
 }
 
 .project-description {
