--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ h1 {
   color: var(--heading-color);
   font-family: var(--heading-font-family);
   font-weight: normal;
+  font-size: 50px;
   margin: 130px 50px 30px 50px;
 }
 
@@ -41,7 +42,6 @@ a {
 .hero {
   padding-bottom: 100px;
   margin: 0;
-  background: var(--branding-color);
 }
 
 .view-work {
@@ -117,4 +117,37 @@ a {
 
 .project-image {
   border-radius: 7px;
+}
+
+/* Media Queries*/
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 25px;
+    padding: 0;
+    line-height: 1.5;
+  }
+  .hero {
+    padding-bottom: 0;
+  }
+
+  .view-work {
+    font-size: 18px;
+    padding: 30px;
+    text-align: center;
+  }
+
+  .section-title {
+    font-size: 25px;
+  }
+
+  h2 {
+    font-size: 25px;
+    text-align: center;
+  }
+
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
