--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ h1 {
   color: var(--heading-color);
   font-family: var(--heading-font-family);
   font-weight: normal;
-  font-size: 50px;
+  font-size: 45px;
   margin: 130px 50px 30px 50px;
 }
 
@@ -140,7 +140,7 @@ a {
 .profile-pic {
   border-radius: 4px;
   height: 320px;
-  margin: 225px 0 0 188px;
+  margin: 230px 0 0 188px;
 }
 
 .view-resume {
@@ -163,6 +163,7 @@ a {
     font-size: 28px;
     padding-top: 0;
     line-height: 1.5;
+    margin-top: 75px;
   }
 
   h2 {
@@ -180,15 +181,18 @@ a {
   }
 
   .about-section-hero p {
-    padding: 0px;
+    padding: 10px;
+  }
+
+  a.view-resume {
+    margin: 0 auto;
   }
 
   .profile-pic {
     max-width: 100%;
     height: 180px;
-    padding-right: 20px;
     padding-bottom: 20px;
-    margin: 0 auto;
+    margin: 15px 0px 0px 0px;
   }
 
   .view-work {
