--- a/src/styles.css
+++ b/src/styles.css
@@ -190,30 +190,6 @@ a {
     text-align: center;
   }
 
-  .about-section-hero {
-    text-align: center;
-  }
-
-  .about-section-hero h1 {
-    margin: 45px;
-    font-size: 30px;
-  }
-
-  .about-section-hero p {
-    padding: 10px;
-  }
-
-  a.view-resume {
-    margin: 0 auto;
-  }
-
-  .profile-pic {
-    max-width: 100%;
-    height: 180px;
-    padding-bottom: 20px;
-    margin: 15px 0px 0px 0px;
-  }
-
   .view-work {
     font-size: 18px;
     padding: 30px;
@@ -241,5 +217,34 @@ a {
 
   .btn-group {
     margin: 3px 3px;
+  }
+
+  .about-section-hero {
+    text-align: center;
+  }
+
+  .about-section-hero h1 {
+    margin: 45px;
+    font-size: 30px;
+  }
+
+  .about-section-hero p {
+    padding: 10px;
+  }
+
+  a.view-resume {
+    margin: 0 auto;
+  }
+
+  .profile-pic {
+    max-width: 100%;
+    height: 180px;
+    padding-bottom: 20px;
+    margin: 15px 0px 0px 0px;
+  }
+
+  .skills-section {
+    margin-top: 50px;
+    text-align: center;
   }
 }
