--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,13 @@ h2 {
   font-weight: bold;
 }
 
+h3 {
+  color: var(--heading-color);
+  font-size: 25px;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+}
+
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
