--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,20 @@ a {
   color: var(--default-color);
 }
 
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+}
+
+.nav-name {
+  max-width: 150px;
+}
+
 .hero {
   padding-bottom: 100px;
   margin: 0;
