--- a/src/styles.css
+++ b/src/styles.css
@@ -193,6 +193,7 @@ footer .social-links a:hover {
 .about-section-hero h1 {
   margin-bottom: 50px;
   font-size: 40px;
+  font-weight: bold;
 }
 
 .about-section-hero p {
@@ -237,7 +238,7 @@ footer .social-links a:hover {
   color: var(--default-color);
 }
 
-/* Work Page */
+/* Work Page Not Shown
 
 .content h3 {
   margin: 20px;
@@ -246,6 +247,7 @@ footer .social-links a:hover {
 .content img {
   border-radius: 4px;
 }
+*/
 
 /* Media Queries*/
 
@@ -260,6 +262,11 @@ footer .social-links a:hover {
   h2 {
     font-size: 25px;
     text-align: center;
+  }
+
+  .hero {
+    padding-bottom: 55px;
+    margin: 0;
   }
 
   .view-work {
