--- a/src/styles.css
+++ b/src/styles.css
@@ -242,7 +242,7 @@ a.open-sourced:hover {
   color: var(--default-color);
 }
 
-/* Work Page Not Shown
+/* Separate Work Page Made to turn in as assignment not shown
 
 .content h3 {
   margin: 20px;
