--- a/src/styles.css
+++ b/src/styles.css
@@ -89,13 +89,13 @@ a.open-sourced:hover {
   font-size: 20px;
 }
 
-.nav-link.active {
-  text-decoration: underline;
-  text-decoration-color: var(--branding-color);
-}
-
 .nav-item {
   padding: 0 10px;
+}
+
+.nav-item:hover {
+  text-decoration: underline;
+  text-decoration-color: var(--branding-color);
 }
 
 .navbar-brand {
@@ -185,11 +185,6 @@ a.open-sourced:hover {
 
 .project-image {
   border-radius: 7px;
-}
-
-.adobe {
-  font-weight: bold;
-  font-style: italic;
 }
 
 /*About Page*/
