--- a/src/styles.css
+++ b/src/styles.css
@@ -121,17 +121,6 @@ a.open-sourced:hover {
   margin-top: 50px;
 }
 
-.view-work {
-  padding-top: 90px;
-  font-family: var(--heading-font-family);
-  color: var(--default-color);
-  font-size: 24px;
-  background: linear-gradient(120deg, #c847d0 0%, #c847d0 100%);
-  background-repeat: no-repeat;
-  background-size: 23% 3%;
-  background-position: 545px 77%;
-}
-
 .highlight-1 {
   background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
   background-repeat: no-repeat;
@@ -153,23 +142,10 @@ a.open-sourced:hover {
   padding: 125px 20px 50px 20px;
 }
 
-.primary-button {
-  background: var(--tertiary-color);
-  border: 4px solid var(--branding-color);
-  border-radius: 4px;
-  color: var(--default-color);
-  font-family: var(--heading-font-family);
-  font-size: 18px;
-  line-height: 27px;
-  padding: 15px 30px;
-  text-decoration: none;
-  margin-right: 15px;
-}
-
-.primary-button:hover {
-  color: var(--default-color);
-  background: var(--branding-color);
-  border: 4px solid var(--tertiary-color);
+.card-title {
+  text-align: center;
+  margin: 20px 0 40px 0;
+  text-decoration: underline #cc99fe;
 }
 
 .secondary-button {
@@ -188,14 +164,6 @@ a.open-sourced:hover {
   color: var(--default-color);
   background: var(--secondary-color);
   border: 4px solid var(--fourth-color);
-}
-
-.project-description {
-  padding: 120px 40px 120px 50px;
-}
-
-.project-image {
-  border-radius: 7px;
 }
 
 .github-repo-link {
@@ -253,20 +221,6 @@ a.open-sourced:hover {
   margin: 230px 0 0 188px;
 }
 
-.view-resume {
-  font-family: var(--heading-font-family);
-  color: var(--default-color);
-  text-decoration: underline;
-  text-decoration-color: var(--secondary-color);
-  font-size: 18px;
-  margin-left: 56px;
-  font-weight: bold;
-}
-
-.view-resume:hover {
-  color: var(--secondary-color);
-}
-
 .skills-section {
   margin: 126px 20px 85px;
 }
@@ -284,17 +238,6 @@ a.open-sourced:hover {
   font-size: 60px;
   color: var(--default-color);
 }
-
-/* Separate Work Page Made to turn in as assignment not shown
-
-.content h3 {
-  margin: 20px;
-}
-
-.content img {
-  border-radius: 4px;
-}
-*/
 
 /* Media Queries*/
 
