--- a/src/styles.css
+++ b/src/styles.css
@@ -148,6 +148,14 @@ a.open-sourced:hover {
   text-decoration: underline #cc99fe;
 }
 
+.card-text {
+  font-size: 20px;
+  line-height: 1.5;
+  color: #000;
+  text-align: left;
+  margin: 40px 20px 40px 15px;
+}
+
 .skills-used {
   list-style-type: none;
   padding: 0;
