--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,8 @@
   --fourth-color: #cc99fe;
 }
 
+/* Global Styles */
+
 body {
   background-color: #f1eff1;
 }
@@ -45,6 +47,227 @@ p {
 a {
   color: var(--default-color);
 }
+
+/* Navigation */
+
+.navbar-nav a {
+  font-family: var(--heading-font-family);
+  font-size: 20px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #000;
+}
+
+.nav-item {
+  padding: 0 10px;
+}
+
+.nav-item:hover {
+  text-decoration: underline;
+  text-decoration-color: var(--branding-color);
+}
+
+.navbar-brand {
+  font-family: var(--heading-font-family);
+  font-size: 25px;
+  font-weight: bold;
+  padding: 0;
+}
+
+/* Hero Section */
+
+.hero {
+  padding-bottom: 100px;
+  margin: 0;
+}
+
+.hero-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 50px;
+}
+
+.primary-button {
+  background: var(--fourth-color);
+  border: 4px solid var(--secondary-color);
+  border-radius: 4px;
+  color: var(--default-color);
+  font-family: var(--heading-font-family);
+  font-size: 20px;
+  line-height: 27px;
+  padding: 15px 30px;
+  text-decoration: none;
+}
+
+.primary-button:hover {
+  color: var(--default-color);
+  background: var(--secondary-color);
+  border: 4px solid var(--fourth-color);
+}
+
+.secondary-button {
+  background: var(--tertiary-color);
+  border: 4px solid var(--branding-color);
+  border-radius: 4px;
+  color: var(--default-color);
+  font-family: var(--heading-font-family);
+  font-size: 20px;
+  line-height: 27px;
+  padding: 15px 30px;
+  text-decoration: none;
+}
+
+.secondary-button:hover {
+  color: var(--default-color);
+  background: var(--branding-color);
+  border: 4px solid var(--tertiary-color);
+}
+
+/* Section Title Styling */
+
+.section-title {
+  font-size: 40px;
+  font-weight: bold;
+  font-family: var(--heading-font-family);
+  padding: 125px 20px 50px 20px;
+}
+
+.highlight-1 {
+  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
+  background-repeat: no-repeat;
+  background-size: 32% 10%;
+  background-position: 0 77%;
+}
+
+.highlight-2 {
+  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
+  background-repeat: no-repeat;
+  background-size: 32% 10%;
+  background-position: 0 77%;
+}
+
+/* Project Section: Card Styling */
+
+.card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 20px auto;
+}
+
+.card-title {
+  text-align: center;
+  margin: 20px 0 40px 0;
+  text-decoration: underline #cc99fe;
+}
+
+.card-text {
+  font-size: 20px;
+  line-height: 1.5;
+  color: #000;
+  text-align: left;
+  margin: 40px 20px 40px 15px;
+}
+
+.skills-used {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.skills-used li {
+  display: inline-block;
+  margin: 5px;
+  padding: 10px;
+  background-color: #c7f4f1;
+  color: #000;
+  border-radius: 25px;
+  font-size: 16px;
+  text-align: center;
+}
+
+.github-repo-link {
+  background: var(--fourth-color);
+  border: 4px solid var(--secondary-color);
+  border-radius: 4px;
+  color: var(--default-color);
+  font-family: var(--heading-font-family);
+  font-size: 16px;
+  line-height: 27px;
+  padding: 8px 20px;
+  text-decoration: none;
+  margin: 10px;
+}
+
+.github-repo-link:hover {
+  color: var(--default-color);
+  background: var(--secondary-color);
+  border: 4px solid var(--fourth-color);
+}
+
+.live-version-link {
+  background: var(--tertiary-color);
+  border: 4px solid var(--branding-color);
+  border-radius: 4px;
+  color: var(--default-color);
+  font-family: var(--heading-font-family);
+  font-size: 16px;
+  line-height: 27px;
+  padding: 8px 10px;
+  text-decoration: none;
+}
+
+.live-version-link:hover {
+  color: var(--default-color);
+  background: var(--branding-color);
+  border: 4px solid var(--tertiary-color);
+}
+
+/*About Section*/
+
+.about-section-hero h1 {
+  margin-bottom: 50px;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.about-section-hero p {
+  padding-left: 57px;
+}
+
+.profile-pic {
+  border-radius: 4px;
+  height: 320px;
+  margin: 230px 0 0 188px;
+}
+
+/* Skills Section */
+
+.skills-section {
+  margin: 126px 20px 85px;
+}
+
+.skills-header {
+  margin-bottom: 55px;
+  font-weight: normal;
+  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
+  background-repeat: no-repeat;
+  background-size: 45% 37%;
+  background-position: 344px 107%;
+}
+
+.row-skills {
+  font-size: 60px;
+  color: var(--default-color);
+}
+
+/* Footer */
 
 footer {
   margin-top: 60px;
@@ -84,187 +307,6 @@ a.open-sourced:hover {
   color: var(--branding-color);
 }
 
-.navbar-nav a {
-  font-family: var(--heading-font-family);
-  font-size: 20px;
-}
-
-.nav-item {
-  padding: 0 10px;
-}
-
-.nav-link.active {
-  text-decoration-color: var(--branding-color);
-}
-.nav-item:hover {
-  text-decoration: underline;
-  text-decoration-color: var(--branding-color);
-}
-
-.navbar-brand {
-  font-family: var(--heading-font-family);
-  font-size: 25px;
-  font-weight: bold;
-  padding: 0;
-}
-
-.hero {
-  padding-bottom: 100px;
-  margin: 0;
-}
-
-.hero-buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  margin-top: 50px;
-}
-
-.highlight-1 {
-  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
-  background-repeat: no-repeat;
-  background-size: 32% 10%;
-  background-position: 0 77%;
-}
-
-.highlight-2 {
-  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
-  background-repeat: no-repeat;
-  background-size: 32% 10%;
-  background-position: 0 77%;
-}
-
-.section-title {
-  font-size: 40px;
-  font-weight: bold;
-  font-family: var(--heading-font-family);
-  padding: 125px 20px 50px 20px;
-}
-
-.card-title {
-  text-align: center;
-  margin: 20px 0 40px 0;
-  text-decoration: underline #cc99fe;
-}
-
-.card-text {
-  font-size: 20px;
-  line-height: 1.5;
-  color: #000;
-  text-align: left;
-  margin: 40px 20px 40px 15px;
-}
-
-.skills-used {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.skills-used li {
-  display: inline-block;
-  margin: 5px;
-  padding: 10px;
-  background-color: #c7f4f1;
-  color: #000;
-  border-radius: 25px;
-  font-size: 16px;
-  text-align: center;
-}
-
-.secondary-button {
-  background: var(--fourth-color);
-  border: 4px solid var(--secondary-color);
-  border-radius: 4px;
-  color: var(--default-color);
-  font-family: var(--heading-font-family);
-  font-size: 20px;
-  line-height: 27px;
-  padding: 15px 30px;
-  text-decoration: none;
-}
-
-.secondary-button:hover {
-  color: var(--default-color);
-  background: var(--secondary-color);
-  border: 4px solid var(--fourth-color);
-}
-
-.github-repo-link {
-  background: var(--fourth-color);
-  border: 4px solid var(--secondary-color);
-  border-radius: 4px;
-  color: var(--default-color);
-  font-family: var(--heading-font-family);
-  font-size: 16px;
-  line-height: 27px;
-  padding: 8px 20px;
-  text-decoration: none;
-  margin-right: 10px;
-}
-
-.github-repo-link:hover {
-  color: var(--default-color);
-  background: var(--secondary-color);
-  border: 4px solid var(--fourth-color);
-}
-
-.live-version-link {
-  background: var(--fourth-color);
-  border: 4px solid var(--secondary-color);
-  border-radius: 4px;
-  color: var(--default-color);
-  font-family: var(--heading-font-family);
-  font-size: 16px;
-  line-height: 27px;
-  padding: 8px 20px;
-  text-decoration: none;
-}
-
-.live-version-link:hover {
-  color: var(--default-color);
-  background: var(--secondary-color);
-  border: 4px solid var(--fourth-color);
-}
-
-/*About Section*/
-
-.about-section-hero h1 {
-  margin-bottom: 50px;
-  font-size: 40px;
-  font-weight: bold;
-}
-
-.about-section-hero p {
-  padding-left: 57px;
-}
-
-.profile-pic {
-  border-radius: 4px;
-  height: 320px;
-  margin: 230px 0 0 188px;
-}
-
-.skills-section {
-  margin: 126px 20px 85px;
-}
-
-.skills-header {
-  margin-bottom: 55px;
-  font-weight: normal;
-  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
-  background-repeat: no-repeat;
-  background-size: 45% 37%;
-  background-position: 344px 107%;
-}
-
-.row-skills {
-  font-size: 60px;
-  color: var(--default-color);
-}
-
 /* Media Queries*/
 
 @media (max-width: 900px) {
@@ -285,20 +327,9 @@ a.open-sourced:hover {
     margin: 0;
   }
 
-  .view-work {
-    font-size: 18px;
-    padding: 30px;
-    text-align: center;
-  }
-
   .section-title {
     font-size: 25px;
     padding-top: 30px;
-    text-align: center;
-  }
-
-  .project-description {
-    padding: 0;
     text-align: center;
   }
 
@@ -325,10 +356,6 @@ a.open-sourced:hover {
 
   .about-section-hero p {
     padding: 10px;
-  }
-
-  a.view-resume {
-    margin: 0 auto;
   }
 
   .profile-pic {
@@ -370,4 +397,3 @@ a.open-sourced:hover {
     font-size: 12px;
     line-height: 30px;
   }
-}
