--- a/src/styles.css
+++ b/src/styles.css
@@ -240,8 +240,8 @@ a {
 
 /* Skills Section */
 
-.skills-section {
-
+.skills-section, #skills {
+  margin-bottom: 70px;
 }
 
 .row-skills {
@@ -252,9 +252,16 @@ a {
 /* Footer */
 
 footer {
-  margin-top: 60px;
+  margin-top: 100px;
   max-width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background: #ffffff;
+}
+
+footer h2 {
+  padding-top: 50px;
+
 }
 
 footer .email-link {
