--- a/src/styles.css
+++ b/src/styles.css
@@ -83,8 +83,12 @@ a {
   text-align: center;
 }
 
+.hero h1 {
+  margin-bottom: 30px; /* Add some space between the heading and the buttons */
+}
+
 .hero-buttons {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
@@ -94,20 +98,27 @@ a {
 }
 
 .btn-group {
-  margin: 20px 30px;
+  margin: 0 10px;
+}
+
+.primary-button, .secondary-button {
+  padding: 10px 20px; 
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+  border-radius: 4px;
+  transition: background-color 0.3s ease; 
+  font-family: var(--heading-font-family);
+  font-size: 1rem;
+  line-height: 27px;
 }
 
 .primary-button {
   background: var(--fourth-color);
   border: 4px solid var(--secondary-color);
-  border-radius: 4px;
   color: var(--default-color);
-  font-family: var(--heading-font-family);
-  font-size: 1rem;
-  line-height: 27px;
-  padding: 10px 20px;
-  text-decoration: none;
 }
+
 
 .primary-button:hover {
   color: var(--default-color);
@@ -120,11 +131,6 @@ a {
   border: 4px solid var(--branding-color);
   border-radius: 4px;
   color: var(--default-color);
-  font-family: var(--heading-font-family);
-  font-size: 1rem;
-  line-height: 27px;
-  padding: 10px 20px;
-  text-decoration: none;
 }
 
 .secondary-button:hover {
