--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 :root {
-  ---font-family: "Space Mono", monospace;
+  --heading-font-family: "Space Mono", monospace;
   --default-font-family: "Source Sans 3", sans-serif;
   --heading-color: #000;
   --default-color: #000;
@@ -312,9 +312,9 @@ footer .email-link {
   color: #000;
   font-size: 24px;
   text-align: center;
-  font-family: var(--heading-font-family);
+  font-family: var(--default-font-family);
   margin: 30px;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 footer .email-link:hover {
@@ -507,7 +507,7 @@ a.open-sourced:hover {
     max-width: 100%;
     height: 180px;
     padding-bottom: 20px;
-    margin: 15px 0px 0px 0px;
+    margin: 20px 0px 0px 0px;
   }
 
   .skills-section {
@@ -520,6 +520,10 @@ a.open-sourced:hover {
     background-repeat: no-repeat;
     background-size: 100% 37%;
     background-position: 1px 107%;
+  }
+
+  footer {
+    width: 100%;
   }
 
   footer .email-link {
