--- a/src/styles.css
+++ b/src/styles.css
@@ -270,26 +270,32 @@ a {
 
 /* Skills Section */
 
-.skills-section, #skills {
-  margin-bottom: 100px;
+
+.skill-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
-.skills-section .row-skills {
-    margin-top: 20px;
+.skill-icon {
+  font-size: 3rem;
+  margin-bottom: 10px;
 }
 
-.skills-section .col-2 {
-    margin-bottom: 10px;
-}
-
-.col-2 .skill-title {
-  margin-left: 45px;
+.skill-title {
+  margin-top: 10px;
+  font-size: 16px;
+  text-align: center;
+  font-family: var (--default-font-family);
 }
 
 .row-skills {
-  font-size: 60px;
-  color: var(--default-color);
+  margin-top: 80px;
 }
+
+
 
 
 /* Footer */
@@ -348,7 +354,7 @@ a.open-sourced:hover {
     }
 
     .skills-section .col-2 {
-        width: 50%;
+        width: 1%;
         margin-bottom: 20px;
     }
 }
