Edited margin-top for profile pic on ipad pro screen size

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ h1 {
   font-family: var(--heading-font-family);
   font-weight: normal;
   font-size: 44px;
-  margin: 105px 50px 30px 50px;
+  margin: 105px 20px 30px 20px;
 }
 
 h2 {
@@ -295,6 +295,9 @@ a {
 
 .row-skills {
   margin-top: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* Footer */
@@ -348,13 +351,13 @@ a.open-sourced:hover {
 
 @media (max-width: 576px) {
   .hero-buttons a {
-        width: 100%;
-        text-align: center;
+      width: 100%;
+      text-align: center;
     }
 
     .skills-section .col-2 {
-        width: 1%;
-        margin-bottom: 20px;
+      width: 1%;
+      margin-bottom: 20px;
     }
 }
 
@@ -409,7 +412,7 @@ a.open-sourced:hover {
 
   .profile-pic {
     max-width: 100%; 
-    margin-top: 20px; 
+    margin-top: 50px; 
   }
 
   .row-skills {
@@ -460,7 +463,7 @@ a.open-sourced:hover {
   }
 
   .profile-pic {
-    margin: 0; 
+    margin: 50px; 
   }
 }
 
