--- a/src/styles.css
+++ b/src/styles.css
@@ -361,6 +361,22 @@ a.open-sourced:hover {
 
 /* Media Queries*/
 
+/* For screens 430px wide and smaller */
+@media (max-width: 430px) {
+  .skill-item {
+    margin-bottom: 20px;
+    text-align: center;
+    align-items: center;
+  }
+
+  .skill-title {
+    margin-top: 10px;
+    font-size: 16px;
+    text-align: center;
+    width: 100%;
+  }
+}
+
 @media (max-width: 576px) {
   .hero-buttons a {
       width: 100%;
@@ -373,7 +389,7 @@ a.open-sourced:hover {
     }
 
     .skill-title p {
-      padding-left: 30px;
+      text-align: center;
     }
 }
 
