--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,8 @@
 
 /* Global Styles */
 
-body, html {
+body,
+html {
   background-color: #f1eff1;
   overflow-x: hidden;
 }
@@ -57,7 +58,7 @@ a {
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: #000;
+  color: #000;
 }
 
 .nav-item {
@@ -102,14 +103,15 @@ a {
   margin: 0 10px;
 }
 
-.primary-button, .secondary-button {
-  padding: 10px 20px; 
+.primary-button,
+.secondary-button {
+  padding: 10px 20px;
   text-decoration: none;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  transition: background-color 0.3s ease; 
+  transition: background-color 0.3s ease;
   font-family: var(--heading-font-family);
   font-size: 1rem;
   line-height: 27px;
@@ -122,7 +124,6 @@ a {
   border: 4px solid var(--secondary-color);
   color: var(--default-color);
 }
-
 
 .primary-button:hover {
   color: var(--default-color);
@@ -153,7 +154,6 @@ a {
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   text-decoration: underline #cc99fe;
 }
-
 
 /* Project Section: Card Styling */
 
@@ -207,7 +207,8 @@ a {
   margin-top: 20px;
 }
 
-.github-repo-link, .live-version-link {
+.github-repo-link,
+.live-version-link {
   display: inline-block;
   border-radius: 4px;
   font-size: 16px;
@@ -247,12 +248,11 @@ a {
 /*About Section*/
 
 .about-section {
-  text-align: center; 
-  display: flex; 
-  flex-direction: column; 
-  align-items: center; 
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 
 .about-section p {
   padding: 30px;
@@ -261,7 +261,6 @@ a {
   text-align: left;
 }
 
-
 .profile-pic {
   border-radius: 4px;
   height: 320px;
@@ -269,9 +268,7 @@ a {
   margin-top: 20px;
 }
 
-
 /* Skills Section */
-
 
 .skill-item {
   display: flex;
@@ -292,7 +289,7 @@ a {
   margin-top: 10px;
   font-size: 16px;
   text-align: center;
-  font-family: var (--default-font-family);
+  font-family: var(--default-font-family);
 }
 
 .row-skills {
@@ -307,7 +304,7 @@ a {
   margin-left: 0;
 }
 
-.row.row-skills > [class*='col-'] {
+.row.row-skills > [class*="col-"] {
   padding-right: 0;
   padding-left: 0;
 }
@@ -324,7 +321,6 @@ footer {
 
 footer h2 {
   padding-top: 50px;
-
 }
 
 footer .email-link {
@@ -379,18 +375,18 @@ a.open-sourced:hover {
 
 @media (max-width: 576px) {
   .hero-buttons a {
-      width: 100%;
-      text-align: center;
-    }
+    width: 100%;
+    text-align: center;
+  }
 
-    .skills-section .col-2 {
-      width: 1%;
-      margin-bottom: 20px;
-    }
+  .skills-section .col-2 {
+    width: 1%;
+    margin-bottom: 20px;
+  }
 
-    .skill-title p {
-      text-align: center;
-    }
+  .skill-title p {
+    text-align: center;
+  }
 }
 
 /* Media Query for iPad Mini and iPad Air */
@@ -401,7 +397,7 @@ a.open-sourced:hover {
     justify-content: center;
     gap: 20px;
   }
-  
+
   .row-skills .col-2 {
     width: 20%;
     text-align: center;
@@ -416,47 +412,47 @@ a.open-sourced:hover {
 /* Media Query specifically for iPad Air */
 @media (max-width: 1180px) {
   .row-skills .col-2 {
-    width: 25%; 
+    width: 25%;
   }
 }
 
 /* Media Query for iPad Pro */
 @media (max-width: 1024px) and (max-height: 1366px) {
   .about-section {
-    flex-direction: column; 
-    align-items: center; 
-    text-align: center; 
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 
   #about {
-  padding-left: 60px;
-}
+    padding-left: 60px;
+  }
 
-.section-title {
-    text-align: center; 
-    padding-top: 50px; 
+  .section-title {
+    text-align: center;
+    padding-top: 50px;
   }
 
   .about-section p {
-    max-width: 80%; 
-    margin: 20px auto; 
+    max-width: 80%;
+    margin: 20px auto;
   }
 
   .profile-pic {
-    max-width: 100%; 
-    margin-top: 50px; 
+    max-width: 100%;
+    margin-top: 50px;
   }
 
   .row-skills {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; 
+    justify-content: center;
   }
-  
+
   .row-skills .col-2 {
-    width: 15%; 
+    width: 15%;
     text-align: center;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
   }
 
   .skill-title {
@@ -468,12 +464,12 @@ a.open-sourced:hover {
 
 @media (min-width: 912px) and (max-width: 1368px) {
   .about-section {
-    justify-content: center; 
+    justify-content: center;
   }
 
   .section-title {
-    text-align: center; 
-    padding-top: 50px; 
+    text-align: center;
+    padding-top: 50px;
   }
 
   .profile-pic {
@@ -481,21 +477,20 @@ a.open-sourced:hover {
   }
 }
 
-
 @media (min-width: 992px) {
   .about-section {
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .about-section p {
-    flex: 1; 
-    text-align: left; 
+    flex: 1;
+    text-align: left;
   }
 
   .profile-pic {
-    margin: 50px; 
+    margin: 50px;
   }
 }
 
@@ -555,13 +550,6 @@ a.open-sourced:hover {
     margin-top: 85px;
   }
 
-  .skills-header {
-    background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
-    background-repeat: no-repeat;
-    background-size: 100% 37%;
-    background-position: 1px 107%;
-  }
-
   .skill-title {
     padding-left: 30px;
   }
@@ -590,3 +578,4 @@ a.open-sourced:hover {
     font-size: 12px;
     line-height: 30px;
   }
+}
